--- a/build.properties
+++ b/build.properties
@@ -1,5 +1,9 @@
-source.. = src/
-output.. = bin/
 bin.includes = META-INF/,\
-               .,\
-               plugin.xml
+               plugin.xml,\
+               bin/,\
+               icons/,\
+               mdt.jar
+src.includes = src/
+jars.compile.order = mdt.jar
+source.mdt.jar = src/
+output.mdt.jar = bin/
