--- a/build.properties
+++ b/build.properties
@@ -1,9 +1,11 @@
 bin.includes = META-INF/,\
                plugin.xml,\
-               bin/,\
                icons/,\
-               mdt.jar
-src.includes = src/
+               mdt.jar,\
+               doc/,\
+               toc.xml
+src.includes = src/,\
+               doc/
 jars.compile.order = mdt.jar
 source.mdt.jar = src/
 output.mdt.jar = bin/
