* gui skeleton for 'new modelica class wizard' created

--- a/build.properties
+++ b/build.properties
@@ -5,7 +5,8 @@ bin.includes = META-INF/,\
                doc/,\
                toc.xml
 src.includes = src/,\
-               doc/
+               doc/,\
+               toc.xml
 jars.compile.order = mdt.jar
 source.mdt.jar = src/
 output.mdt.jar = bin/
