* fixing cosmetic errors in eclipse metadata

--- a/org.modelica.mdt.test/.project
+++ b/org.modelica.mdt.test/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>org.modelica.mdt.test-old</name>
+	<name>org.modelica.mdt.test</name>
 	<comment></comment>
 	<projects>
 	</projects>
