* ModelicaBuildDeltaVisitor.visit() loads files into OMC and gets error messages * ModelicaBuilder.reportProblem() creates Problem Markers * IModelicaElement.getResource() now throws InitializationException * ModelicaClass.getType() nicer implementation * ModelicaClass.getResource() added * ModelicaElement.getAdapter() added a dummy try/catch * ModelicaElement.getResource() now throws InitializationException * ModelicaLibraryPackage.getPackages() now retries if failed by loading the Modelica System Library * ModelicaLibraryPackage.getResource() added dummy call to OMCProxy.getCrefInfo() * ModelicaProject.getResource() now throws InitializationException * OMCProxy.sendExpression() no longer loads the Modelica System Library * OMCProxy.loadSystemLibrary() added (loads Modelica System Library) * OMCProxy.getErrorString() added * OMCProxy.loadFileInteractive() added (loads a file into OMC, gets errors or classes loaded) * OMCProxy.getCrefInfo() added (gets file and line number given a Modelica class) * ProxyParser.parseErrorList() added (parses the error string by separating over \n) * ModelicaNature.configure() now adds the ModelicaBuilder to created project * ModelicaNature.deconfigure() now removes the ModelicaBuilder from a project * ProjectsViewDoubleClickAction.run() now tries to open an IModelicaClass * NewPackageWizard.setSelection() now throws InitializationException * NewPackageWizard.createControl() now has try/catch around setSelection()

--- a/org.modelica.mdt/plugin.xml
+++ b/org.modelica.mdt/plugin.xml
@@ -80,6 +80,7 @@
       <runtime>
          <run class="org.modelica.mdt.ui.ModelicaNature"/>
       </runtime>
+      <builder id="org.modelica.mdt.modelicaBuilder"/>
    </extension>
    <extension
          point="org.eclipse.ui.ide.projectNatureImages">
@@ -97,4 +98,15 @@
          file="doc/toc.xml"
          primary="true"/>
    </extension>
+   <extension
+   		id="modelicaBuilder"
+   		name="Modelica Builder"
+   		point="org.eclipse.core.resources.builders">
+   		<builder hasNature="true">
+   			<run
+   				class="org.modelica.mdt.builder.ModelicaBuilder">
+   				<parameter name="comment" value="Builder Comment" />
+   			</run>
+   		</builder>
+   	</extension>
 </plugin>
