* added new tracing option trace/omcStatus

--- a/org.modelica.mdt/build.properties
+++ b/org.modelica.mdt/build.properties
@@ -1,12 +1,12 @@
 bin.includes = META-INF/,\
                plugin.xml,\
                icons/,\
-               mdt.jar,\
                doc/,\
-               toc.xml
+               toc.xml,\
+               bin/,\
+               src/
 src.includes = src/,\
                doc/,\
                toc.xml
-jars.compile.order = mdt.jar
-source.mdt.jar = src/
-output.mdt.jar = bin/
+jars.compile.order = 
+bin.excludes = src/org/
