* added support for browsing class components

--- a/org.modelica.mdt/build.properties
+++ b/org.modelica.mdt/build.properties
@@ -3,10 +3,8 @@ bin.includes = META-INF/,\
                icons/,\
                doc/,\
                toc.xml,\
-               bin/,\
-               src/
+               bin/
 src.includes = src/,\
                doc/,\
                toc.xml
 jars.compile.order = 
-bin.excludes = src/org/
