--- a/org.modelica.mdt/plugin.xml
+++ b/org.modelica.mdt/plugin.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <?eclipse version="3.0"?>
 <plugin>
+   <extension-point id="compiler" name="Modelica Compiler" schema="schema/compiler.exsd"/>
    <extension
          point="org.eclipse.ui.views">
       <category
