--- a/org.modelica.mdt/.project
+++ b/org.modelica.mdt/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>Modelica Development Tooling</name>
+	<name>org.modelica.mdt.core</name>
 	<comment></comment>
 	<projects>
 	</projects>
