omcproxy   * check for both classnames and compile errors testcompilerproxy   * test if broken_nested_model makes loadSourceFile return     both errors and classnames area51projects   * add file: broken_nested_model.mo

--- a/org.modelica.mdt.test/.settings/org.eclipse.jdt.core.prefs
+++ b/org.modelica.mdt.test/.settings/org.eclipse.jdt.core.prefs
@@ -1,4 +1,4 @@
-#Thu Oct 27 11:18:05 CEST 2005
+#Thu Feb 02 12:06:31 CET 2006
 eclipse.preferences.version=1
 org.eclipse.jdt.core.compiler.codegen.inlineJsrBytecode=enabled
 org.eclipse.jdt.core.compiler.codegen.targetPlatform=1.5
