--- a/org.modelica.mdt.ui/plugin.xml
+++ b/org.modelica.mdt.ui/plugin.xml
@@ -57,12 +57,12 @@
          point="org.eclipse.ui.editors">
       <editor
             class="org.modelica.mdt.ui.editor.ModelicaEditor"
-            icon="icons/obj16/mo_file.png"
+            contributorClass="org.eclipse.ui.texteditor.BasicTextEditorActionContributor"
             default="false"
-            name="Modelica Editor"
-            contributorClass="org.modelica.mdt.ui.editor.BasicTextEditorActionContributor"
+            extensions="mo"
+            icon="icons/obj16/mo_file.png"
             id="org.modelica.mdt.editor"
-            extensions="mo"/>
+            name="Modelica Editor"/>
    </extension>
    <extension
          point="org.eclipse.ui.perspectives">
