* building Update Site now works

--- a/org.modelica.mdt.core/build.properties
+++ b/org.modelica.mdt.core/build.properties
@@ -7,4 +7,5 @@ bin.includes = META-INF/,\
 src.includes = src/,\
                doc/,\
                toc.xml
-jars.compile.order = 
+jars.compile.order = .
+source.. = src/
