--- a/org.modelica.mdt.core/build.properties
+++ b/org.modelica.mdt.core/build.properties
@@ -3,9 +3,8 @@ bin.includes = META-INF/,\
                icons/,\
                doc/,\
                toc.xml,\
-               bin/
-src.includes = src/,\
-               doc/,\
+               .
+src.includes = doc/,\
                toc.xml
 jars.compile.order = .
 source.. = src/
