--- a/org.modelica.mdt.core/plugin.xml
+++ b/org.modelica.mdt.core/plugin.xml
@@ -26,4 +26,11 @@
    			</run>
    		</builder>
    	</extension>
+   <extension
+         id="unexpectednamespacemarker"
+         name="Bad Within Statement Marker"
+         point="org.eclipse.core.resources.markers">
+      <super type="org.eclipse.core.resources.problemmarker"/>
+      <persistent value="true"/>
+   </extension>
 </plugin>
