* implementet presistency for editor input objects used by modelica editor, thus fixing the bug of non-working code completion in restored editors

--- a/org.modelica.mdt.ui/plugin.xml
+++ b/org.modelica.mdt.ui/plugin.xml
@@ -87,4 +87,10 @@
          file="doc/toc.xml"
          primary="true"/>
    </extension>
+   <extension
+         point="org.eclipse.ui.elementFactories">
+      <factory
+            class="org.modelica.mdt.ui.ModelicaElementFactory"
+            id="org.modelica.mdt.ui.ModelicaElementFactory"/>
+   </extension>
 </plugin>
