Added the Correct Indentation action to the ModelicaEditor. The action does nothing right now, just display to the stderr that it was called.

--- a/org.modelica.mdt.ui/plugin.xml
+++ b/org.modelica.mdt.ui/plugin.xml
@@ -57,8 +57,8 @@
          point="org.eclipse.ui.editors">
       <editor
             class="org.modelica.mdt.ui.editor.ModelicaEditor"
-            contributorClass="org.eclipse.ui.texteditor.BasicTextEditorActionContributor"
-            default="false"
+            contributorClass="org.modelica.mdt.ui.editor.ModelicaActionContributor"
+            default="true"
             extensions="mo"
             icon="icons/obj16/mo_file.png"
             id="org.modelica.mdt.editor"
