- a lot of changes   + document partitioner   + different scanners for different content types   + a lot of stuff is adapted from JDT   + colors moved to ModelicaEditorColors

--- a/org.modelica.mdt.ui/plugin.xml
+++ b/org.modelica.mdt.ui/plugin.xml
@@ -100,6 +100,12 @@
             id="org.modelica.mdt.ui.modelica"
             name="Modelica"/>
    </extension>
+   <extension
+         point="org.eclipse.core.filebuffers.documentSetup">
+      <participant
+            class="org.modelica.mdt.ui.text.ModelicaDocumentSetupParticipant"
+            extensions="mo"/>
+   </extension>
    
    
 </plugin>
