--- a/org.modelica.mdt.ui/.settings/org.eclipse.jdt.core.prefs
+++ b/org.modelica.mdt.ui/.settings/org.eclipse.jdt.core.prefs
@@ -1,4 +1,4 @@
-#Thu Feb 02 12:06:51 CET 2006
+#Mon May 01 21:38:18 CEST 2006
 eclipse.preferences.version=1
 org.eclipse.jdt.core.compiler.codegen.inlineJsrBytecode=enabled
 org.eclipse.jdt.core.compiler.codegen.targetPlatform=1.5
