--- a/org.modelica.mdt.ui/.settings/org.eclipse.jdt.core.prefs
+++ b/org.modelica.mdt.ui/.settings/org.eclipse.jdt.core.prefs
@@ -1,10 +1,5 @@
-#Tue Oct 17 01:12:50 CEST 2006
+#Sat Mar 24 16:11:28 CET 2007
 eclipse.preferences.version=1
-org.eclipse.jdt.core.compiler.codegen.inlineJsrBytecode=enabled
-org.eclipse.jdt.core.compiler.codegen.unusedLocal=preserve
-org.eclipse.jdt.core.compiler.debug.lineNumber=generate
-org.eclipse.jdt.core.compiler.debug.localVariable=generate
-org.eclipse.jdt.core.compiler.debug.sourceFile=generate
 org.eclipse.jdt.core.formatter.align_type_members_on_columns=false
 org.eclipse.jdt.core.formatter.alignment_for_arguments_in_allocation_expression=16
 org.eclipse.jdt.core.formatter.alignment_for_arguments_in_enum_constant=16
