--- a/org.modelica.uml.sysml.edit/plugin.properties
+++ b/org.modelica.uml.sysml.edit/plugin.properties
@@ -120,3 +120,6 @@ _UI_PropertyKind_equation_literal = equation
 _UI_ModelicaProperty_type_feature = Type
 _UI_ModelicaProperty_dataType_feature = Data Type
 _UI_ModelicaClassifier_type = Modelica Classifier
+_UI_ModelicaPrimitiveType_type = Modelica Primitive Type
+_UI_ModelicaType_modelicaType_feature = Modelica Type
+_UI_ModelicaType_typeData_feature = Type Data
